updated some changes

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -31,7 +31,7 @@
 
         <ion-item menu-close href="#/app/home">
           <i class="ion-home"></i>
-          Home
+          Vega Beverages
         </ion-item>
 
         <ion-item menu-close href="#/app/search">
