--- a/www/templates/cart.list.html
+++ b/www/templates/cart.list.html
@@ -21,7 +21,7 @@
 		  	<img class="cartImg" ng-src="{{img}}{{cartInfo.photo}}">
 		  		<br><br>
 		  	<span class="greenbox mt10">Subtotal</span>
-		  	<span class="subtotal">RM {{cartInfo.price}}
+		  	<span class="subtotal">MYR {{cartInfo.price|number:2}}
 		  	</span>
 		  </div>
 		  <div class="col font-small">
@@ -29,7 +29,7 @@
 		  	<br>
 		  	<span class="pl5">Quantity:</span><span style="color:#F1C40F;"> {{cartInfo.qty}}</span>
 		  	<br>
-		  	<span class="pl5">Price:</span><span style="color:#7F8C8D;"> RM {{cartInfo.unit_price}}</span>
+		  	<span class="pl5">Price:</span><span style="color:#7F8C8D;"> MYR {{cartInfo.unit_price|number:2}}</span>
 		  </div>
 		  <div class="col"></div>
 		</div>
@@ -43,7 +43,7 @@
 			  	
 			</div>
 			<div class="col col-33">
-				<span class="font-big" style="color:#3498DB;">RM {{cartList[0].total_price}}	
+				<span class="font-big" style="color:#3498DB;">MYR {{cartList[0].total_price|number:2}}	
 			  	</span>
 			</div>
 		</div>
