--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Home">
+<ion-view view-title="Vega Beverages">
   <ion-content ng-controller="HomeController">
 
 	<ion-slide-box active-slide="1" 
