--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -12,6 +12,7 @@
       <ion-nav-buttons side="right">
         <a class="button" ng-href="#/app/cart/list/{{cart_id}}">
           <img ng-src="/img/cart.png" width="25" />
+         <!-- <i class="ion-android-cart" width="25"></i> -->
         </a>
       </ion-nav-buttons>
 
