--- a/www/templates/cart.list.html
+++ b/www/templates/cart.list.html
@@ -56,7 +56,7 @@
 			
 			<form ng-submit="salesorder(cartList)">
 				<div class="col">
-					<button type="submit" class="button btn-block btnCheckOut font-medium">
+					<button type="submit" data-ng-disabled="checkOrder()" class="button btn-block btnCheckOut font-medium">
 					  Check Out
 					</button>
 				</div>
