--- a/www/templates/order.history.details.html
+++ b/www/templates/order.history.details.html
@@ -5,21 +5,19 @@
 
     	<!-- Table header name -->
 	    <div class="row col-header center font-small">
-          <div class="col col-20">Product<br> id</div>
-          <div class="col col-20">Product name</div>
-          <div class="col col-20">Quantity</div>
-          <div class="col col-20">Price (MYR)</div>
-          <div class="col col-20">Status</div>
+          <div class="col">Product id</div>
+          <div class="col">Product name</div>
+          <div class="col">Quantity</div>
+          <div class="col">Price (MYR)</div>
         </div>
 
         <!-- Table data -->
         <ul class="list">
 			<div class="row col-bg center col-line font-small" ng-repeat="order in orderhistorydetails">
-				<div class="col col-20">{{order.id_ProductMaster}}</div>
-				<div class="col col-20">{{order.name}}</div>
-				<div class="col col-20">{{order.qty}}</div>
-				<div class="col col-20">{{order.price|number:2}}</div>
-				<div class="col col-20">{{order.status}}</div>
+				<div class="col">{{order.id_ProductMaster}}</div>
+				<div class="col">{{order.name}}</div>
+				<div class="col">{{order.qty}}</div>
+				<div class="col">{{order.price|number:2}}</div>
 	        </div>	        
 		</ul>
 
@@ -29,7 +27,7 @@
 				<p class="ml5 font-medium input-label ">Total:</p>
 			</div>
 			<div class="col col-67">
-				<span class="font-big" style="color:#3498DB;">MYR {{order.price|number:2}}
+				<span class="font-big" style="color:#3498DB;">MYR {{orderhistorydetails[0].total_price|number:2}}
 				</span>
 			</div>
 		</div>
