--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -12,7 +12,7 @@
     <ion-tab title="Login">
       <!-- Tab 1 content -->
       <!-- ng-submit="doLogin()" -->
-      <form name="loginForm" ng-submit="login(userdata)" ng-controller="user" novalidate="">
+      <form name="loginForm" ng-submit="loginUser(userdata)" novalidate="">
         <!-- Login form -->
         <div class="list pt80 mt20">
             <!-- Remove Picture  -->
