fixed order history info

--- a/www/css/hunge.css
+++ b/www/css/hunge.css
@@ -194,3 +194,5 @@ div > input[type="text"] {
   border: none;
   border-bottom: 1px solid #F1C40F;
 }
+
+/*=============ORDER HISTORY =================*/
