--- a/www/templates/order.history.html
+++ b/www/templates/order.history.html
@@ -2,26 +2,28 @@
   <ion-content ng-controller="orderhistory">
 
 	  <div class="list">
-	  	<a href="#/app/order/history/details">
+
 		    <div class="item font-small" ng-repeat="order in orderhistory">
-		     	<div class="row">
-			    	<div class="col col-50">Order Id</div>
-			    	<div class="col col-50">{{order.code}}</div>
-			    </div>
-			    <div class="row">
-			    	<div class="col col-50">Order Date</div>
-			    	<div class="col col-50">{{order.created_on}}</div>
-			    </div>
-		    	<div class="row">
-			    	<div class="col col-50">Order Status</div>
-			    	<div class="col col-50">{{order.status}}</div>
-			    </div>
-			     <div class="row">
-			    	<div class="col col-50">Recipient</div>
-			    	<div class="col col-50">{{order.given_name}} {{order.family_name}}</div>
-			    </div>
+		    	<a href="#/app/order/history/details/{{order.code}}">
+			     	<div class="row">
+				    	<div class="col col-50">Order Id</div>
+				    	<div class="col col-50">{{order.code}}</div>
+				    </div>
+				    <div class="row">
+				    	<div class="col col-50">Order Date</div>
+				    	<div class="col col-50">{{order.created_on}}</div>
+				    </div>
+			    	<div class="row">
+				    	<div class="col col-50">Order Status</div>
+				    	<div class="col col-50">{{order.status}}</div>
+				    </div>
+				     <div class="row">
+				    	<div class="col col-50">Recipient</div>
+				    	<div class="col col-50">{{order.given_name}} {{order.family_name}}</div>
+				    </div>
+			    </a>
 		    </div>
-	    </a>
+	 
 	    <!-- End of list item -->
 	</div>
 
