--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -10,7 +10,7 @@
       </ion-nav-buttons>
 
       <ion-nav-buttons side="right">
-        <a class="button" ng-href="#/app/cart/list/{{cart_id}}">
+        <a class="button" ng-href="#/app/cart/list/{{cart_id}}" ng-click="getCartId()">
          <i class="ion-android-cart" width="25" style="font-size:20px;"></i>
         </a>
       </ion-nav-buttons>
@@ -66,7 +66,7 @@
           Order History
         </ion-item>
 
-        <ion-item menu-close href="#/app/cart/list/{{cart_id}}">
+        <ion-item menu-close href="#/app/cart/list/{{cart_id}}" ng-click="getCartId()">
           <i class="ion-android-cart"></i>
           Cart List
           <span class="badge badge-assertive">{{cartList[0].cart_count}}</span>
