--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -3,7 +3,7 @@
   <ion-header-bar>
      <div class="title center">Wine Enterprise</div>
     <div class="buttons">
-      <button class="button button-clear button-positive pull-right font-sm" ng-click="closeLogin()"><span class="font-medium">Close</span></button>
+      <button class="button button-clear button-positive pull-right font-sm" ng-click="closeLogin()"><span class="font-medium" style="color:#fff;">Close</span></button>
     </div>
   </ion-header-bar>
 
