--- a/www/templates/order.history.html
+++ b/www/templates/order.history.html
@@ -25,7 +25,22 @@
 		    </div>
 	 
 	    <!-- End of list item -->
-	</div>
+	 </div> 
+
+	<!-- <div class="card">
+		 <div class="item font-small" ng-repeat="order in orderhistory">
+		    	<a href="#/app/order/history/details/{{order.code}}">
+			     	<div class="row">
+		     		 	<div class="col col-33">{{order.code}}</div>
+						<div class="col col-33 col-offset-33">{{order.created_on}}</div>
+			     	</div>
+			     	<div class="row">
+			     		<div class="col col-33">{{order.given_name}} {{order.family_name}}</div>
+						<div class="col col-33 col-offset-33">{{order.status}}</div>
+			     	</div>
+			    </a>
+		    </div>
+	</div> -->
 
   </ion-content>
 </ion-view>
