--- a/www/templates/cart.list.html
+++ b/www/templates/cart.list.html
@@ -1,5 +1,4 @@
 <ion-view view-title="Cart List">
-
   <ion-content ng-controller="cartlist">
 
  <div class="list">
@@ -24,13 +23,18 @@
 		  	<span class="subtotal">MYR {{cartInfo.price|number:2}}
 		  	</span>
 		  </div>
-		  <div class="col font-small">
-		  	<span class="pl5" style="color:#9B59B6;">{{cartInfo.product_name}}</span>
-		  	<br>
-		  	<span class="pl5">Quantity:</span><span style="color:#F1C40F;"> {{cartInfo.qty}}</span>
-		  	<br>
-		  	<span class="pl5">Price:</span><span style="color:#7F8C8D;"> MYR {{cartInfo.unit_price|number:2}}</span>
-		  </div>
+			 <div class="col font-small">
+				  	<span class="pl5" style="color:#9B59B6;">{{cartInfo.product_name}}</span>
+				  	<br>
+				  	<span class="pl5">
+				  		Quantity:
+				  	</span>
+				  
+				  	<span style="color:#F1C40F;"> {{cartInfo.qty}}</span>
+	
+				  	<br>
+				  	<span class="pl5">Price:</span><span style="color:#7F8C8D;"> MYR {{cartInfo.unit_price|number:2}}</span>
+			  </div> 
 		  <div class="col"></div>
 		</div>
 	</div>
@@ -40,7 +44,6 @@
 		<div class="row">
 			<div class="col col-offset-33 col-33">
 				<p align="right">Total:</p>
-			  	
 			</div>
 			<div class="col col-33">
 				<span class="font-big" style="color:#3498DB;">MYR {{cartList[0].total_price|number:2}}	
@@ -56,16 +59,16 @@
 			
 			<form ng-submit="salesorder(cartList)">
 				<div class="col">
-					<button type="submit" class="button btn-block btnCheckOut font-medium">
+					<!-- If no item selected, then disable checkout button -->
+					<button ng-disabled="cartList[0].cart_count <= 0 || cartList[0].cart_count == undefined" 
+					type="submit" class="button btn-block btnCheckOut font-medium">
 					  Check Out
 					</button>
 				</div>
 			</form>
 		</div>	
 	</div>
-
 </div>
 
   </ion-content>
-
 </ion-view>
