--- a/www/templates/order.history.html
+++ b/www/templates/order.history.html
@@ -1,31 +1,33 @@
 <ion-view view-title="Order History">
   <ion-content ng-controller="orderhistory">
 
-	  <div class="list">
+	  <!-- <div class="list"> -->
 
 		    <div class="item font-small" ng-repeat="order in orderhistory">
 		    	<a href="#/app/order/history/details/{{order.code}}">
-			     	<div class="row">
-				    	<div class="col col-50">Order Id</div>
-				    	<div class="col col-50">{{order.code}}</div>
-				    </div>
-				    <div class="row">
-				    	<div class="col col-50">Order Date</div>
-				    	<div class="col col-50">{{order.created_on}}</div>
-				    </div>
-			    	<div class="row">
-				    	<div class="col col-50">Order Status</div>
-				    	<div class="col col-50">{{order.status}}</div>
-				    </div>
-				     <div class="row">
-				    	<div class="col col-50">Recipient</div>
-				    	<div class="col col-50">{{order.given_name}} {{order.family_name}}</div>
-				    </div>
+			    	<div class="card m0" style="background:#F1F1F1;">
+				     	<div class="row">
+					    	<div class="col col-50">Order Id</div>
+					    	<div class="col col-50"><span class="text-color">{{order.code}}</span></div>
+					    </div>
+					    <div class="row">
+					    	<div class="col col-50">Order Date</div>
+					    	<div class="col col-50"><span class="text-color">{{order.created_on}}</span></div>
+					    </div>
+				    	<div class="row">
+					    	<div class="col col-50">Order Status</div>
+					    	<div class="col col-50"><span class="text-color">{{order.status}}</span></div>
+					    </div>
+					     <div class="row">
+					    	<div class="col col-50">Recipient</div>
+					    	<div class="col col-50"><span class="text-color">{{order.given_name}} {{order.family_name}}</span></div>
+					    </div>
+					</div>
 			    </a>
 		    </div>
 	 
 	    <!-- End of list item -->
-	 </div> 
+	 <!-- </div>  -->
 
 	<!-- <div class="card">
 		 <div class="item font-small" ng-repeat="order in orderhistory">
