--- a/www/templates/order.summary.html
+++ b/www/templates/order.summary.html
@@ -41,7 +41,7 @@
 				<p class="ml5 font-medium input-label ">Total:</p>
 			</div>
 			<div class="col col-67">
-				<span class="font-big" style="color:#3498DB;">MYR {{salesorderList[0].total_price|number:2}}
+				<span class="font-big" style="color:#3498DB;">MYR {{total_price|number:2}}
 				</span>
 			</div>
 		</div>
