--- a/www/templates/billing.html
+++ b/www/templates/billing.html
@@ -1,6 +1,5 @@
 <ion-view view-title="Billing">
 	<ion-content ng-controller="billing">
-
 	    <form ng-submit="billingForm(billing)">
 	    	<!-- Billing information of payer info  -->
 			<div class="card">
@@ -26,17 +25,17 @@
 					</div>
 					<div class="row">
 						<input type="text" class="ml5"  placeholder="Street Address 1" 
-						ng-model="billing.address">
+						ng-model="billing.address1">
 					</div>
 					<div class="row">
-						<input type="text" class="ml5"  placeholder="Street Address 2">
+						<input type="text" class="ml5" ng-model="billing.address2"  placeholder="Street Address 2">
 					</div>
 					<div class="row">
 						<div class="col col-50">
-							<input type="text" placeholder="City">
+							<input type="text" ng-model="billing.city"  placeholder="City">
 						</div>
 						<div class="col col-50">
-							<input type="text" placeholder="Zip">
+							<input type="text" ng-model="billing.codes" placeholder="Postal Codes">
 						</div>
 					</div> 
 				</div>
