--- a/www/templates/shipping.html
+++ b/www/templates/shipping.html
@@ -29,17 +29,17 @@
 							<input type="text" class="ml5" ng-model="shipmentInfo.phone" placeholder="Phone Number">
 						</div>
 						<div class="row">
-							<input type="text" class="ml5" ng-model="shipmentInfo.address"  placeholder="Street Address 1">
+							<input type="text" class="ml5" ng-model="shipmentInfo.address1"  placeholder="Street Address 1">
 						</div>
 						<div class="row">
-							<input type="text" class="ml5"  placeholder="Street Address 2">
+							<input type="text" class="ml5" ng-model="shipmentInfo.address2"  placeholder="Street Address 2">
 						</div>
 						<div class="row">
 							<div class="col col-50">
-								<input type="text" placeholder="City">
+								<input type="text" ng-model="shipmentInfo.city" placeholder="City">
 							</div>
 							<div class="col col-50">
-								<input type="text" placeholder="Zip">
+								<input type="text" ng-model="shipmentInfo.codes" placeholder="Postal Codes">
 							</div>
 						</div>
 						<div class="row">
@@ -49,7 +49,7 @@
 							      Shipping Method
 							    </div>
 							    <select ng-model="mySelect" ng-change="showSelectValue(mySelect)">
-							      <option ng-repeat="shipmentInfo in shipmentList" value="{{shipmentInfo.id}}">{{shipmentInfo.name}}</option>
+							      <option ng-repeat="shipmentInfo in shipmentList" value="{{shipmentInfo.id}}">{{shipmentInfo.name}} = MYR {{shipmentInfo.price}}</option>
 							    </select>
 							 </label>
 						</div>	
