--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -23,7 +23,8 @@
   <ion-side-menu side="left">
     <ion-header-bar class="bar-stable">
       <ion-view>
-        <img class="title-image" src="http://wine-enterprise.com/images/whiskyweb1_02.gif" width="100%"/>
+        <img src="http://staging.wine-enterprise.com:8011/assets/img/vega_logo.png" 
+        width="100%"/>
       </ion-view>
     </ion-header-bar>
     <ion-content>
