added form validation

--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,7 +1,7 @@
 <ion-modal-view>
   <!-- Header  -->
   <ion-header-bar>
-     <div class="title center">Wine Enterprise</div>
+     <div class="title center">Vega Beverages</div>
     <div class="buttons">
       <button class="button button-clear button-positive pull-right font-sm" ng-click="closeLogin()"><span class="font-medium" style="color:#fff;">Close</span></button>
     </div>
@@ -12,7 +12,7 @@
     <ion-tab title="Login">
       <!-- Tab 1 content -->
       <!-- ng-submit="doLogin()" -->
-      <form name="loginForm" ng-submit="loginUser(userdata)" novalidate="">
+      <form name="loginForm" ng-submit="loginUser(userdata)" novalidate>
         <!-- Login form -->
         <div class="list pt80 mt20">
             <!-- Remove Picture  -->
