--- a/www/templates/cart.list.html
+++ b/www/templates/cart.list.html
@@ -30,6 +30,7 @@
 				  		Quantity:
 				  	</span>
 				  
+				  	<!-- Button for add and minus cart. -->
 				  	<div class="row mt5" style="color:#F1C40F;"> 
 					  		<button type="submit" ng-click="plus(cartInfo)"><i class="ion-plus"></i>
 					  		</button>
