--- a/www/css/paul.css
+++ b/www/css/paul.css
@@ -16,7 +16,22 @@ a{
     overflow: hidden;
     text-overflow: ellipsis;
 }
-
+.pull-right{
+    float:right !important;
+}
+.grey{
+    color: #666 !important;
+}
+.top-right{
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+.bottom-right{
+    position: absolute;
+    bottom: 0;
+    right: 0;
+}
 /*============BORDER BOX============*/
 .sbox{
 	border: 1px solid #666;
