--- a/www/templates/categories.html
+++ b/www/templates/categories.html
@@ -1,8 +1,8 @@
 <ion-view view-title="Categories">
-
-  <ion-content ng-controller="categories">
-	
-    <div class="row" ng-repeat="productTypeInfo in productTypeList" ng-if="$index % 2 == 0">
+	<ion-content ng-controller="categories">
+	<!-- row -->
+    <div class="row" ng-repeat="productTypeInfo in productTypeList" ng-show="productTypeList[$index] != null" ng-if="$index % 2 == 0">
+    	<!-- col left -->
     	<a class="col col-50" ng-if="$index < productTypeList.length" 
     	ng-href="#/app/product/list/{{productTypeList[$index].code}}" style="cursor: pointer">
 		  	<div class="sbox center">
@@ -13,7 +13,8 @@
 			  	</p>
 		  	</div>
 	  	</a>
-	  	<a class="col col-50" ng-if="$index < productTypeList.length" 
+	  	<!-- col right -->
+	  	<a class="col col-50" ng-show="productTypeList[$index+1] != null" ng-if="$index < productTypeList.length" 
 	  	ng-href="#/app/product/list/{{productTypeList[$index+1].code}}" style="cursor: pointer">
 		  	<div class="sbox center">
 			  	<img ng-src="{{img}}{{productTypeList[$index+1].photo}}" width="100%">
@@ -24,7 +25,6 @@
 		  	</div>
 	  	</a>
 	</div>
-
+	<!-- end row -->
   </ion-content>
-
 </ion-view>
