--- a/www/templates/product.list.html
+++ b/www/templates/product.list.html
@@ -1,9 +1,9 @@
 <ion-view view-title="Product List" class="bg">
-
-  <ion-content ng-controller="productlist">
-
+	<ion-content ng-controller="productlist">
+	<!-- row -->
     <div class="row" ng-repeat="productInfo in productList" ng-if="$index % 2 == 0">
-    	<a class="col col-50" ng-if="$index < productList.length" 
+    	<!-- col-left -->
+    	<a class="col col-50" ng-show="productList[$index] != null" ng-if="$index < productList.length" 
     	ng-href="#/app/product/details/{{productList[$index].sku_code}}">
 		  	<div class="sbox center">
 			  	<img ng-src="{{img}}{{productList[$index].photo}}" width="100%">
@@ -11,7 +11,8 @@
 			  	<p class="default-bg p10">MYR {{productList[$index].price}}</p>
 		  	</div>
 	  	</a>
-	  	<a class="col col-50" ng-if="$index < productList.length" 
+	  	<!-- col-right -->
+	  	<a class="col col-50" ng-show="productList[$index+1] != null" ng-if="$index < productList.length" 
 	  	ng-href="#/app/product/details/{{productList[$index+1].sku_code}}">
 		  	<div class="sbox center">
 			  	<img ng-src="{{img}}{{productList[$index+1].photo}}" width="100%">
@@ -20,7 +21,6 @@
 		  	</div>
 	  	</a>
 	</div>
-
+	<!-- end row -->
   </ion-content>
-
 </ion-view>
