--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -1,71 +1,51 @@
 <ion-view view-title="Member Profile">
-  <ion-content ng-controller="user">
+  	<ion-content ng-controller="user">
     
-  			<form name="profileForm" ng-submit="profile(profileInfo)" novalidate>
-		    	<!-- Shipping information of guest info  -->
-				<div class="card">
-					<div class="item item-divider font-medium">
-						Profile Details
-					</div>
-					<div class="item item-text-wrap">
-						<div class="row">
-							<div class="col col-50">
-								<input type="text" name="username" placeholder="Username" ng-model="profileInfo.username" required>
-								<span class="assertive font-small" ng-show="profileForm.username.$dirty && profileForm.username.$invalid">
-								<span ng-show="profileForm.username.$error.required">Username is required.
-								 </span>
-								</span>
-							</div>
-							<div class="col col-50">
-								<input type="email" name="email" placeholder="Email" ng-model="billing.email" required>
-							<span class="assertive font-small" ng-show="bilForm.email.$dirty && bilForm.email.$invalid">
-						    <span ng-show="bilForm.email.$error.required">Email is required.</span>
-						    <span ng-show="bilForm.email.$error.email">Invalid email address.</span>
-							</div>
-						</div>
-						<div class="row">
-							<div class="col col-50">
-								<input type="text" name="firstName" placeholder="First Name"  ng-model="profileInfo.firstName" required>
-								<span class="assertive font-small" ng-show="profileForm.firstName.$dirty && profileForm.firstName.$invalid">
-								<span ng-show="profileForm.firstName.$error.required">First name is required.</span>
-								</span>
-							</div>
-							<div class="col col-50">
-								<input type="text" name="lastName" placeholder="Last Name" ng-model="profileInfo.lastName" required>
-								<span class="assertive font-small" ng-show="profileForm.lastName.$dirty && profileForm.lastName.$invalid">
-								<span ng-show="profileForm.lastName.$error.required">Last name is required.</span>
-								</span>
-							</div>
-						</div>
-						<div class="row">
-							<input type="text" class="ml5" placeholder="Phone Number">
-						</div>
-						<div class="row">
-							<input type="text" class="ml5"  placeholder="Street Address 1">
-						</div>
-						<div class="row">
-							<input type="text" class="ml5"  placeholder="Street Address 2">
-						</div>
-						<div class="row">
-							<div class="col col-50">
-								<input type="text" placeholder="City">
-							</div>
-							<div class="col col-50">
-								<input type="text" placeholder="Zip">
-							</div>
-						</div> 
-					</div>
+		<form ng-submit="profileform(userdata)">
+			<input type="hidden" ng-model="userdata.id_UserMaster"/>
+			<div class="card">
+				<div class="item item-divider font-medium">
+					Profile Details
 				</div>
-				<!-- End of shipping detail -->
-
-				<div class="row">
-					<div class="col">
-						<a class="button btn-block btnCheckOut font-medium">
-						  Save
-						</a>
+				<div class="item item-text-wrap">
+					<div class="row">
+						<div class="col col-50">
+							<input type="text" ng-model="userdata.given_name" placeholder="First Name">
+						</div>
+						<div class="col col-50">
+							<input type="text" ng-model="userdata.family_name" placeholder="Last Name">
+						</div>
 					</div>
+					<div class="row">
+						<div class="col col-50">
+							<input type="text" ng-model="userdata.email" placeholder="Email">
+						</div>
+						<div class="col col-50">
+							<input type="text" ng-model="userdata.phone" placeholder="Phone Number">
+						</div>
+					</div>
+					<div class="row">
+						<div class="col col-50">
+							<input type="text" ng-model="userdata.address1" placeholder="Street Address 1">
+						</div>
+						<div class="col col-50">
+						<input type="text" ng-model="userdata.address2"  placeholder="Street Address 2">
+						</div>
+					</div>
+					<div class="row">
+						<div class="col col-50">
+							<input type="text" ng-model="userdata.city" placeholder="City">
+						</div>
+						<div class="col col-50">
+							<input type="text" ng-model="userdata.postcode" placeholder="Postcode/Zip">
+						</div>
+					</div> 
 				</div>
-			</form>
+			</div>
+			<div class="row">
+				<button type="submit" class="button btn-block btnCheckOut font-medium">Save</button>
+			</div>
+		</form>
 
-  </ion-content>
+  	</ion-content>
 </ion-view>
